# engram-router

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: API_SPEC.md  ARCHITECTURE_V2.md  LLM_EXTRACTOR_ENHANCEMENT.md  OPTIMIZATION_ROADMAP.md  PERFORMANCE_REVIEW_PHASE2.md  PROJECT_BRIEF.md  REQUIREMENTS.md  SCHEMA.md  eval_v2_lme_naive_ku_pref.json  eval_v2_longmemeval_engram_judge_30.json  eval_v2_longmemeval_oracle.json  eval_v2_longmemeval_oracle_judge.json  eval_v2_longmemeval_s.json  eval_v2_longmemeval_s_judge.json  eval_v2_matrix.json  eval_v2_matrix_ce_sweep.txt  eval_v2_report_ce_hyde_on.json  eval_v2_report_ce_off.json  eval_v2_report_ce_on.json  performance_audit.md  phase2_architecture_audit.md  phase2_integration_test_plan.md  query_expansion_design.md  security_audit.md  semantic_audit_report.json
examples/: benchmark_questions.jsonl  bug_investigation_demo.md  bug_investigation_questions.jsonl  daily_life_demo.md  daily_life_questions.jsonl  long_conversation_demo.md  regression_corpus.md  regression_questions.jsonl  tech_decision_demo.md  tech_decision_questions.jsonl
tests/: __init__.py  conftest.py  deep_random_check.py  eval_v2.py  eval_v2_longmemeval.py  eval_v2_matrix.py  lme_judge.py  longmemeval_loader.py  multi_angle_eval.py  semantic_audit.py  test_benchmark.py  test_capability_causal.py  test_capability_corrections.py  test_capability_forgetting.py  test_capability_persona.py  test_capability_timeline.py  test_causal.py  test_cross_encoder.py  test_demo_advantages.py  test_edges.py  (+13 more)
(+47 files in other folders)
