[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "engram-router"
version = "0.2.0-dev"
description = "Lossless on-demand memory routing for AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "EngramRouter contributors"}]
keywords = ["ai-agent", "memory", "mcp", "context", "retrieval", "hermes", "claude", "openclaw"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pyyaml>=6"]
llm = [
    "sentence-transformers>=2.2.0",
    "faiss-cpu>=1.7.0",
    "numpy>=1.24.0",
]

[project.scripts]
engram = "engram_router.cli:main"
engram-mcp = "engram_router.mcp_server:main"
engram-install = "engram_router.install:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
